@@ -1,5 +1,11 @@
 2010-07-13  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	Remove subprocesses #ifdefs from term.c.
+	* process.c (add_keyboard_wait_descriptor)
+	(delete_keyboard_wait_descriptor): Move to common section, do
+	nothing when subprocesses is not defined.
+	* term.c (Fsuspend_tty, Fresume_tty, init_tty): Remove subprocesses #ifdefs.
+
 	Convert maybe_fatal to standard C.
 	* lisp.h (verror): Declare.
 	* eval.c (verror): New function containing the code from ...
